--- a/src/app/components/stacks/stacks.component.html
+++ b/src/app/components/stacks/stacks.component.html
@@ -12,19 +12,19 @@
           <div class="tech-group">
             <h4>Markup & Styling</h4>
             <div class="tech-tags">
-              <span *ngFor="let tech of stackData.frontEnd.markup_and_styling" class="tech-tag frontend">{{ tech }}</span>
+              <span *ngFor="let tech of stackData.frontEnd.markup_and_styling" class="tech-tag">{{ tech }}</span>
             </div>
           </div>
           <div class="tech-group">
             <h4>Lenguajes de Programación</h4>
             <div class="tech-tags">
-              <span *ngFor="let tech of stackData.frontEnd.programming_languages" class="tech-tag frontend">{{ tech }}</span>
+              <span *ngFor="let tech of stackData.frontEnd.programming_languages" class="tech-tag">{{ tech }}</span>
             </div>
           </div>
           <div class="tech-group">
             <h4>Frameworks & Librerías</h4>
             <div class="tech-tags">
-              <span *ngFor="let tech of stackData.frontEnd.frameworks_and_libraries" class="tech-tag frontend">{{ tech }}</span>
+              <span *ngFor="let tech of stackData.frontEnd.frameworks_and_libraries" class="tech-tag">{{ tech }}</span>
             </div>
           </div>
         </div>
@@ -34,7 +34,7 @@
           <div class="tech-group">
             <h4>Runtime & Frameworks</h4>
             <div class="tech-tags">
-              <span *ngFor="let tech of stackData.backEnd.runtime_and_frameworks" class="tech-tag backend">{{ tech }}</span>
+              <span *ngFor="let tech of stackData.backEnd.runtime_and_frameworks" class="tech-tag">{{ tech }}</span>
             </div>
           </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="stack-category">
           <h3>Bases de Datos</h3>
           <div class="tech-tags">
-            <span *ngFor="let db of stackData.databases" class="tech-tag database">{{ db }}</span>
+            <span *ngFor="let db of stackData.databases" class="tech-tag">{{ db }}</span>
           </div>
         </div>
 
@@ -51,13 +51,13 @@
           <div class="tech-group">
             <h4>Plataformas</h4>
             <div class="tech-tags">
-              <span *ngFor="let platform of stackData.cloud_and_services.platforms" class="tech-tag cloud">{{ platform }}</span>
+              <span *ngFor="let platform of stackData.cloud_and_services.platforms" class="tech-tag">{{ platform }}</span>
             </div>
           </div>
           <div class="tech-group">
             <h4>Servicios AWS</h4>
             <div class="tech-tags">
-              <span *ngFor="let aws of stackData.cloud_and_services.aws_services" class="tech-tag aws">{{ aws }}</span>
+              <span *ngFor="let aws of stackData.cloud_and_services.aws_services" class="tech-tag">{{ aws }}</span>
             </div>
           </div>
         </div>
@@ -67,20 +67,27 @@
           <div class="tech-group">
             <h4>Containerización</h4>
             <div class="tech-tags">
-              <span *ngFor="let tool of stackData.devOps_and_tools.containerization" class="tech-tag devops">{{ tool }}</span>
+              <span *ngFor="let tool of stackData.devOps_and_tools.containerization" class="tech-tag">{{ tool }}</span>
             </div>
           </div>
           <div class="tech-group">
             <h4>Control de Versiones</h4>
             <div class="tech-tags">
-              <span *ngFor="let tool of stackData.devOps_and_tools.version_control" class="tech-tag devops">{{ tool }}</span>
+              <span *ngFor="let tool of stackData.devOps_and_tools.version_control" class="tech-tag">{{ tool }}</span>
             </div>
           </div>
           <div class="tech-group">
             <h4>Testing</h4>
             <div class="tech-tags">
-              <span *ngFor="let tool of stackData.devOps_and_tools.testing" class="tech-tag testing">{{ tool }}</span>
+              <span *ngFor="let tool of stackData.devOps_and_tools.testing" class="tech-tag">{{ tool }}</span>
             </div>
+          </div>
+        </div>
+
+        <div class="stack-category">
+          <h3>Infraestructura como Código</h3>
+          <div class="tech-tags">
+            <span *ngFor="let tool of stackData.infrastructure_as_code" class="tech-tag">{{ tool }}</span>
           </div>
         </div>
       </div>
