--- a/src/app/components/certifications/certifications.component.html
+++ b/src/app/components/certifications/certifications.component.html
@@ -1,6 +1,7 @@
 <section class="section" id="certifications">
   <div class="main-container">
     <h2 class="section-title zoom-out-effect">
+      <i class="fas fa-certificate"></i>
       Certificaciones
     </h2>
     <div class="mode-toggle-container">
