--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,6 +1,9 @@
 <section class="section contact-section" id="contact">
   <div class="main-container">
-    <h2 class="section-title zoom-out-effect">Contacto</h2>
+    <h2 class="section-title zoom-out-effect">
+      <i class="fas fa-envelope"></i>
+      Contacto
+    </h2>
     <div class="mode-toggle-container">
       <button class="mode-toggle-btn" (click)="toggleView()">
         {{ showJson ? 'Client Mode' : 'JSON Mode' }}
