--- a/src/app/components/stacks/stacks.component.html
+++ b/src/app/components/stacks/stacks.component.html
@@ -1,6 +1,7 @@
 <section class="section" id="stacks">
   <div class="main-container">
     <h2 class="section-title zoom-out-effect">
+      <i class="fas fa-code"></i>
       Stack Tecnológico
     </h2>
     <div class="mode-toggle-container">
